[blog] Update TVM flow `tvm.build`

--- a/_posts/2020-03-26-tvm-flow.md
+++ b/_posts/2020-03-26-tvm-flow.md
@@ -4,12 +4,13 @@ title: TVM - 代码生成流程
 tags: [dl, tvm]
 ---
 
-本文主要介绍TVM的代码生成流程，即调用`relay.build`之后发生了什么，将深入到TVM的源代码进行剖析。（这里采用的依然是TVM v0.6）
+本文主要介绍TVM的代码生成流程，即调用`relay.build`或`tvm.build`之后发生了什么，将深入到TVM的源代码进行剖析。（这里采用的依然是TVM v0.6）
 
 <!--more-->
 
-首先区分两个`build`的区别：`tvm.build`主要针对**单一算子**（参照[Tensor Expression]({% post_url 2020-03-19-tvm-te %})一文），而`relay.build`是针对**整个模型**进行编译（参照[GCN优化]({% post_url 2020-03-21-tvm-gcn %})一文），其中也会调用到`tvm.build`。
+首先区分两个`build`的区别：`tvm.build`主要针对**单一算子**（参照[Tensor Expression]({% post_url 2020-03-19-tvm-te %})一文），而`relay.build`是针对**整个模型**进行编译（参照[GCN优化]({% post_url 2020-03-21-tvm-gcn %})一文），而Relay最后也会调用到`tvm::build`做代码生成。
 
+## `relay.build`
 通常的模型编译由以下两条语句完成。
 ```python
 # Build with Relay
@@ -49,7 +50,7 @@ class BuildModule(object):
         return graph_json, mod, params
 ```
 
-而`_build_module._BuildModule()`又通过FFI在`python/tvm/relay/_build_module.py`中与C++函数建立联系。
+而`_build_module._BuildModule()`又通过[FFI](https://github.com/tqchen/ffi-navigator)在`python/tvm/relay/_build_module.py`中与C++函数建立联系。
 
 ```python
 from tvm._ffi.function import _init_api
@@ -70,7 +71,7 @@ TVM_REGISTER_GLOBAL("relay.build_module._BuildModule")
 });
 ```
 
-也就是注册了一个`RelayBuildModule`供调用，由于我们主要用的是`build`函数，因此到`RelayBuildModule`中找对应的函数。这里TVM又用`PackedFunc`做了一层封装，见下。
+也就是注册了一个`RelayBuildModule`供调用，由于我们主要用的是`build`函数，因此到`RelayBuildModule`中找对应的函数。这里TVM又用[`PackedFunc`](https://docs.tvm.ai/dev/runtime.html#packedfunc)做了一层封装，见下。
 
 ```cpp
 PackedFunc GetFunction(const std::string& name,
@@ -178,7 +179,7 @@ PackedFunc GetFunction(const std::string& name,
 因此实际`graph_codegen_->Codegen`的函数是一个`PackedFunc`，定义在[`GraphRuntimeCodegen.Codegen`](https://github.com/apache/incubator-tvm/blob/c6f8c23c349f3ef8bacceaf3203f7cc08e6529de/src/relay/backend/graph_runtime_codegen.cc#L200)，用来将`relay::Function func`进行遍历，然后生成计算图。
 
 ### 后端代码生成
-Relay得到lower后的函数，最后一步则是交给`tvm.build`做代码生成，跳转到`src/codegen/build_module.cc`中的[`build`](https://github.com/apache/incubator-tvm/blob/c6f8c23c349f3ef8bacceaf3203f7cc08e6529de/src/codegen/build_module.cc#L591)函数（注意这里重载了几个版本），然后跳转到核心`build`，注意这里的`build`函数支持异构编译，只要再`inputs`划分好不同硬件设施即可。
+Relay得到lower后的函数，最后一步则是交给`tvm::build`做代码生成，跳转到`src/codegen/build_module.cc`中的[`build`](https://github.com/apache/incubator-tvm/blob/c6f8c23c349f3ef8bacceaf3203f7cc08e6529de/src/codegen/build_module.cc#L591)函数（注意这里重载了几个版本），然后跳转到核心`build`，注意这里的`build`函数支持异构编译，只要再`inputs`划分好不同硬件设施即可。
 
 ```cpp
 // Build for heterogeneous execution.
@@ -229,13 +230,53 @@ runtime::Module build(const Map<Target, Array<LoweredFunc>>& inputs,
 当中最最核心的则是`mhost = codegen::Build`，最后跳转过去就开始调用代码生成模块了（`src/codegen/codegen.cc`）。
 
 ```cpp
+runtime::Module Build(const Array<LoweredFunc>& funcs,
+                      const std::string& target) {
+  // do something
+
   std::string build_f_name = "codegen.build_" + mode;
   // the build function.
   const PackedFunc* bf = runtime::Registry::Get(build_f_name);
   runtime::Module m = transformed_funcs.empty() ?
                       (*bf)(funcs, target) :
                       (*bf)(transformed_funcs, target);
+  return m;
+}
 ```
+
+以生成LLVM IR为例，`codegen.build_llvm`会在`src/codegen/llvm/llvm_module.cc`注册，然后调用同个文件中的`LLVMModuleNode->Init`。这时会跳转到`src/codegen/llvm/codegen_llvm.cc`中的`CodeGenLLVM`类进行代码生成。
+
+## `tvm.build`
+用`tvm.build`对算子进行编译则是按照以下方式进行调用，例子来自[Tensor Expression]({% post_url 2020-03-19-tvm %})。
+```python
+s = tvm.create_schedule(C.op)
+tgt = "llvm" # "cuda"
+fadd = tvm.build(s,[A,B,C],target=tgt,name="myadd")
+```
+
+调用`tvm.build`后首先跳转到`python/tvm/build_module.py`，其中的`build`函数主要做两个步骤：
+1. lower高层次代码
+2. 后端代码生成
+
+### 代码变换
+lower高层次代码对应的是
+
+```python
+flist = lower(inputs,args,name=name,binds=binds)
+```
+
+而[`lower`函数](https://github.com/apache/incubator-tvm/blob/c6f8c23c349f3ef8bacceaf3203f7cc08e6529de/python/tvm/build_module.py#L338)同样在`python/tvm/build_module.py`中，类似于`relay.build`中的`Optimize`，即执行对应的优化Pass。
+
+优化Pass的主体实施都在`src/api/api_pass.cc`中，以`tvm.ir_pass`进行注册（注意由于C++函数中已经在`tvm`的命名空间里，故搜索时直接搜`ir_pass`才会出来对应的API）。
+
+### 代码生成
+lower完之后就进入到后端代码生成，对应`build`函数中的
+
+```python
+mhost = codegen.build_module(fhost_all, str(target_host))
+```
+
+同样的原理，跳转至`tvm/codegen.py`，初始化`tvm.codegen`的API `codegen._Build`，调用FFI，跳转至`src/api/api_codegen.cc`，最后跳转至`src/codegen/codegen.cc`中的`tvm::Build`，之后的后端代码生成则与`relay.build`相同。
 
 ## References
 * TVM Codebase Walkthrough by Example, <https://docs.tvm.ai/dev/codebase_walkthrough.html>
