[blog] Fix bugs and add more materials on TVM

--- a/_posts/2020-03-26-tvm-flow.md
+++ b/_posts/2020-03-26-tvm-flow.md
@@ -10,7 +10,7 @@ tags: [dl, tvm]
 
 首先区分两个`build`的区别：`tvm.build`主要针对**单一算子**（参照[Tensor Expression]({% post_url 2020-03-19-tvm-te %})一文），而`relay.build`是针对**整个模型**进行编译（参照[GCN优化]({% post_url 2020-03-21-tvm-gcn %})一文），而Relay最后也会调用到`tvm::build`做代码生成。
 
-## `relay.build`
+## relay.build
 通常的模型编译由以下两条语句完成。
 ```python
 # Build with Relay
@@ -18,7 +18,58 @@ with relay.build_config(opt_level=0):
     graph, lib, params = relay.build(func, target, params=params)
 ```
 
-那么对`relay.build`进行跟踪，跳转进来是`python/tvm/relay/build_module.py`，其中的`build`函数直接返回`BuildModule.__init__`中的内容。
+<div class="alert alert-info">
+<details markdown="1">
+<summary markdown="span">
+跟踪细节
+</summary>
+
+这里稍微提一下如何进行代码跟踪，一方面可以直接通过VS Code在函数上方Alt+单击跳转，另一方面如果想有更直观的印象，则可以利用[pycallgraph](http://pycallgraph.slowchop.com/en/master/examples/basic.html)进行可视化（需先用pip安装），代码如下，还是用[GCN的代码]({% post_url 2020-03-21-tvm-gcn %})编译模块。
+
+```python
+from pycallgraph import PyCallGraph
+from pycallgraph.output import GraphvizOutput
+from pycallgraph import Config
+
+graphviz = GraphvizOutput()
+graphviz.output_file = 'relay_callgraph.png'
+config = Config(max_depth=5)
+
+with PyCallGraph(output=graphviz,config=config):
+    # Build with Relay
+    with relay.build_config(opt_level=0):
+        graph, lib, params = relay.build(func, target, params=params)
+```
+
+生成的Callgraph如下图所示。
+![](/files/programs/relay_callgraph.png)
+
+这里为放置递归过深，设置了最大深度为5，但生成的图依然很大。不过从中还是可以看出（需放大）
+* 各函数之间的调用关系，如`tvm.relay.build_module.build`->`tvm.relay.build_module.BuildModule.build`
+* FFI的打包调用关系，C++和Python在哪些函数上实现互调
+* 深色标注的结点（执行时间长）实际上也是核心的执行步骤，即关键路径
+* 结点的调用次数，如`tvm.build_module.lower`调用了14次，对应的正是14个Relay算子，可见Relay IR[计算图可视化]({% post_url 2020-03-25-relay-ir-viz %})。
+
+</details></div>
+
+那么对`relay.build`进行跟踪，跳转进来是`python/tvm/relay/build_module.py`（这里是因为在`relay/__init__.py`中将`build`函数直接import到relay的命名空间，因此跳过了`build_module`这一层），其中的`build`函数是`build_module`内的全局函数(helper)。
+
+```python
+def build(mod, target=None, target_host=None, params=None):
+    # do somthing
+
+    if isinstance(autotvm.DispatchContext.current, autotvm.FallbackContext):
+        tophub_context = autotvm.tophub.context(list(target.values()))
+    else:
+        tophub_context = autotvm.util.EmptyContext()
+
+    with tophub_context:
+        bld_mod = BuildModule()
+        graph_json, mod, params = bld_mod.build(func, target, target_host, params)
+    return graph_json, mod, params
+```
+
+首先是寻找AutoTVM是否有预先tune好的参数记录，然后构造`tophub_context`，在其内部构建了`BuildModule`之后，才跳转到`BuildModule.build`，然后返回`BuildModule.__init__`中的内容。
 
 ```python
 class BuildModule(object):
@@ -50,7 +101,7 @@ class BuildModule(object):
         return graph_json, mod, params
 ```
 
-而`_build_module._BuildModule()`又通过[FFI](https://github.com/tqchen/ffi-navigator)在`python/tvm/relay/_build_module.py`中与C++函数建立联系。
+而`_build_module._BuildModule()`又通过[FFI](https://github.com/tqchen/ffi-navigator)在`python/tvm/relay/_build_module.py`中与C++函数建立联系（`tvm._ffi._cytpes.function.Function.__call__`）。
 
 ```python
 from tvm._ffi.function import _init_api
@@ -123,7 +174,7 @@ PackedFunc GetFunction(const std::string& name,
 3. 后端代码生成
 
 ### 优化
-先是优化[`Optimize`](https://github.com/apache/incubator-tvm/blob/c6f8c23c349f3ef8bacceaf3203f7cc08e6529de/src/relay/backend/build_module.cc#L289)，可以看到就是执行一些静态分析的Pass。
+先是优化[`Optimize`](https://github.com/apache/incubator-tvm/blob/c6f8c23c349f3ef8bacceaf3203f7cc08e6529de/src/relay/backend/build_module.cc#L289)，可以看到这里的优化主要是设备无关的优化，是graph-level的针对tensor运算的优化。（这里的优化pass都已经在C++中实现，先前版本的NNVM似乎还是在Python中调用）
 
 ```cpp
   relay::Module Optimize(
@@ -246,8 +297,8 @@ runtime::Module Build(const Array<LoweredFunc>& funcs,
 
 以生成LLVM IR为例，`codegen.build_llvm`会在`src/codegen/llvm/llvm_module.cc`注册，然后调用同个文件中的`LLVMModuleNode->Init`。这时会跳转到`src/codegen/llvm/codegen_llvm.cc`中的`CodeGenLLVM`类进行代码生成。
 
-## `tvm.build`
-用`tvm.build`对算子进行编译则是按照以下方式进行调用，例子来自[Tensor Expression]({% post_url 2020-03-19-tvm %})。
+## tvm.build
+用`tvm.build`对算子进行编译则是按照以下方式进行调用，例子来自[Tensor Expression]({% post_url 2020-03-19-tvm-te %})。
 ```python
 s = tvm.create_schedule(C.op)
 tgt = "llvm" # "cuda"
@@ -265,7 +316,68 @@ lower高层次代码对应的是
 flist = lower(inputs,args,name=name,binds=binds)
 ```
 
-而[`lower`函数](https://github.com/apache/incubator-tvm/blob/c6f8c23c349f3ef8bacceaf3203f7cc08e6529de/python/tvm/build_module.py#L338)同样在`python/tvm/build_module.py`中，类似于`relay.build`中的`Optimize`，即执行对应的优化Pass。
+而[`lower`函数](https://github.com/apache/incubator-tvm/blob/c6f8c23c349f3ef8bacceaf3203f7cc08e6529de/python/tvm/build_module.py#L338)同样在`python/tvm/build_module.py`中，类似于`relay.build`中的`Optimize`，但这里执行的是operator-level的优化，主要针对循环变换。
+
+```python
+def lower(sch,
+          args,
+          name="default_function",
+          binds=None,
+          simple_mode=False):
+
+    # initialization
+
+    # Phase 0
+    if isinstance(sch, schedule.Schedule):
+        stmt = form_body(sch)
+
+    for f in lower_phase0:
+        stmt = f(stmt)
+
+    compact = ir_pass.VerifyCompactBuffer(stmt)
+    binds, arg_list = get_binds(args, compact, binds)
+
+    # Phase 1
+    stmt = ir_pass.RewriteForTensorCore(stmt, sch, binds)
+    stmt = ir_pass.StorageFlatten(stmt, binds, 64, cfg.instrument_bound_checkers)
+    stmt = ir_pass.CanonicalSimplify(stmt)
+    for f in lower_phase1:
+        stmt = f(stmt)
+
+    # Phase 2
+    if not simple_mode:
+        stmt = ir_pass.LoopPartition(stmt, cfg.partition_const_loop)
+    if cfg.disable_vectorize:
+        stmt = ir_pass.SkipVectorize(stmt)
+    else:
+        stmt = ir_pass.VectorizeLoop(stmt)
+    stmt = ir_pass.InjectVirtualThread(stmt)
+    stmt = ir_pass.InjectDoubleBuffer(stmt, cfg.double_buffer_split_loop)
+    stmt = ir_pass.StorageRewrite(stmt)
+    stmt = ir_pass.UnrollLoop(
+        stmt,
+        cfg.auto_unroll_max_step,
+        cfg.auto_unroll_max_depth,
+        cfg.auto_unroll_max_extent,
+        cfg.unroll_explicit)
+    for f in lower_phase2:
+        stmt = f(stmt)
+
+    # Phase 3
+    stmt = ir_pass.Simplify(stmt)
+    stmt = ir_pass.RemoveNoOp(stmt)
+    if not cfg.disable_select_rewriting:
+        stmt = ir_pass.RewriteUnsafeSelect(stmt)
+    for f in lower_phase3:
+        stmt = f(stmt)
+    # Instrument BoundCheckers
+    if cfg.instrument_bound_checkers:
+        stmt = ir_pass.InstrumentBoundCheckers(stmt)
+    if simple_mode:
+        return stmt
+
+    return ir_pass.MakeAPI(stmt, name, arg_list, 0, cfg.restricted_func)
+```
 
 优化Pass的主体实施都在`src/api/api_pass.cc`中，以`tvm.ir_pass`进行注册（注意由于C++函数中已经在`tvm`的命名空间里，故搜索时直接搜`ir_pass`才会出来对应的API）。
 
@@ -280,5 +392,6 @@ mhost = codegen.build_module(fhost_all, str(target_host))
 
 ## References
 * TVM Codebase Walkthrough by Example, <https://docs.tvm.ai/dev/codebase_walkthrough.html>
+* TVM图编译器Relay简单探究 - 郑思泽的文章 - 知乎, <https://zhuanlan.zhihu.com/p/91283238>
 * 谢睿峰, TVM/VTA代码生成流程, <https://krantz-xrf.github.io/2019/10/24/tvm-workflow.html>
 * <https://discuss.tvm.ai/t/relationship-between-tvm-build-and-relay-build/4166>
