[blog] Update SPA - NJU (lec 5)

--- a/_posts/2020-03-24-spa-nju.md
+++ b/_posts/2020-03-24-spa-nju.md
@@ -187,6 +187,75 @@ $$
 | 转换函数 | OUT=gen$\cup$(IN-kill) | OUT=gen$\cup$(IN-kill) | OUT=gen$\cup$(IN-kill) |
 | Meet | $\cup$ | $\cup$ | $\cap$ |
 
+## 数据流分析-理论
+如果将数据流分析中的值域设为$V$，那么可以定义
+
+$$(OUT[n_1],OUT[n_2],\ldots,OUT[n_k])\subset(V_1\times V_2\cdots V_k)=V^k$$
+
+那么每一轮迭代相当于作用一个函数$F:V^k\mapsto V^k$，最终会到达一个不动点$X=F(X)$。
+
+### 偏序
+定义偏序集(poset)为$(P,\sqsubseteq)$，其中$\sqsubseteq$在$P$上定义了一个二元偏序关系，满足
+1. 自反性(reflexivity)：$\forall x\in P,x\sqsubseteq x$
+2. 反对称性(antisymmetry)：$\forall x,y\in P,x\sqsubseteq y\land y\sqsubseteq x\implies x=y$
+3. 传递性(transitivity)：$\forall x,y,z\in P,x\sqsubseteq y\land y\sqsubseteq z\implies x\sqsubseteq z$
+
+偏序意味着有些在$P$内的有些元素对是没有办法比较的。
+
+下面的幂集是一个典型的偏序集的例子。
+
+<div class="mermaid">
+graph TD;
+    A["{a,b,c}"] --> B["{a,b}"];
+    A --> C["{a,c}"];
+    A --> D["{b,c}"];
+    B --> E["{a}"];
+    B --> F["{b}"];
+    C --> E;
+    C --> G["{c}"];
+    D --> F;
+    D --> G;
+    E --> H["{}"];
+    F --> H;
+    G --> H;
+</div>
+
+上/下界(upper/lower bound)
+: 给定$(P,\sqsubseteq)$和子集$S\subset P$，若$u\in P$是$S$的上界，则$\forall x\in S,x\sqsubseteq u$；类似地，若$1\in P$是$S$的下界，则$\forall x\in S,1\sqsubseteq x$。
+
+上确界(lub/join)/下确界(glb/meet)
+: 所有$S$上界中最小的一个称为$S$的上确界，记为$\sqcup$；所有$S$下界中最大的一个称为$S$的下确界，记为$\sqcap$。通常，如果$S$只含两个元素$\{a,b\}$，那么上确界可被写成$a\sqcup b$(join)，下确界可被写成$a\sqcap b$(meet)。
+
+如上例中，考虑$S$为左侧三个结点{a},{b},{a,b}，则上界为{a,b}和{a,b,c}，上确界为{a,b}，下界和下确界都是{}。
+
+但并不是所有偏序集都有上确界或下确界，而如果有的话一定唯一（反证法）。注意界不一定在子集$S$中。
+
+### 格
+格(lattice)
+: 如果偏序集是格，则**任两个元素对**都有lub和glb。
+
+故上例的幂集是一个格，join算子代表$\cup$，meet算子代表$\cap$。
+
+半格(semilattice)
+: 如果任两个元素对只有<u>一侧</u>的确界，则称其为join/meet半格。
+
+完全格(complete lattice)
+: 对于格的**任意子集**都有上下确界，那么该格称为完全格。完全格中的最大元素称为top$\top$，最小元素称为bottom$\bot$。
+
+幂集依然是个完全格。结论：**有限**的格都是完全格。
+
+乘积格(product lattice)
+: 类似于笛卡尔积，平凑成n个维度。
+
+### 不动点定理
+单调性(monotonicity)
+: 定义在格上的函数$f:L\mapsto L$是单调的，若$\forall x,y\in L,x\sqsubseteq y\implies f(x)\sqsubseteq f(y)$。
+
+不动点定理(fixed-point theorem)
+: 给定完全格$(L,\sqsubseteq)$，若满足(a) $f:L\mapsto L$是单调的，(b) $L$是有限的(finite)，则最小不动点可以通过迭代$f(\bot),\ldots,f^k(\bot)$迭代得到，最大不动点可通过$f(\top),\ldots,f^k(\top)$迭代得到。
+
+证明分为两个部分，存在性与最值性。存在性用经典的无穷递增与有限集矛盾，最值性用反证法。
+
 ## 课程大纲
 1. 简介
 2. 中间表示(IR)
