--- a/_posts/2020-04-01-tianhe.md
+++ b/_posts/2020-04-01-tianhe.md
@@ -23,7 +23,75 @@ tag: [tools]
 但需要注意，天河**并非共享内存**架构，如果采用多个节点进行计算，则每个节点加载入内存的内容是不一样的，需要显式通过MPI管理通信以及数据一致性。
 
 ## 常用指令
+### CPU集群
+下面示例在登录节点上编译C++程序并在计算结点运行并行程序的方法，需先登录CPU集群。
 ```bash
+############ 登录节点 ###########
+$ module avail # 查看可用模块
+gcc/4.7.4                            intel-compilers/11.1
+gcc/4.8.4                            intel-compilers/13.0.0
+gcc/4.8.5                            intel-compilers/14.0.2
+gcc/4.9.2                            intel-compilers/15.0.1
+gcc/5.2.0                            intel-compilers/2017_update4
+gcc/5.3.0                            intel-compilers/2018
+gcc/5.4.0
+
+# 登录节点默认为gcc 4.4.6编译器，根据个人需求加载模块进行更换
+$ module load intel-compilers/2018 # 这里使用Intel的icpc编译器进行编译
+$ icpc --version
+icpc (ICC) 18.0.0 20170811
+Copyright (C) 1985-2017 Intel Corporation.  All rights reserved.
+
+$ icpc -fopenmp -std=c++11 matmul.cpp -o matmul # 编译
+
+# 不要直接在登录节点./matmul！
+# 有三种方式将计算任务迁移到计算节点，见下
+
+# 天河二号由银河系列超级计算机继承而来，因此指令前缀均为yh
+$ yhinfo # 查看集群节点状态
+# alloc代表被占用，idle代表空闲
+PARTITION AVAIL  TIMELIMIT  NODES  STATE NODELIST
+free         up   infinite    757  alloc cn[9600-9622,...]
+free         up   infinite     18   idle cn[9807,9894,...]
+
+$ yhalloc -N 1 -p free # -N指出分配节点数目，-p指出分区(上面的PARTITION)
+yhalloc: Granted job allocation 14248255
+
+$ yhq # 查看分配的节点信息
+   JOBID PARTITION     NAME         USER ST       TIME  NODES NODELIST(REASON)
+14248255      free     bash         sysu  R       0:30      1 cn9603
+
+# 方式一：交互式运行
+$ yhrun -n 1 -N 1 -p free ./matmul # 任务数，任务需要的节点数，分区，执行指令
+# 更多指令可通过yhrun -h查看
+
+# 方式二：登录到计算节点执行（对于CPU集群不建议此项操作）
+$ ssh cn9603 # 登录到计算节点（只有分配了才能登录）
+
+############ 计算节点 ##########
+$ ./matmul # 可能会有动态库未加载，需返回登录节点重新操作，详情参见详细用户手册
+
+$ exit # 返回登录节点
+##################################
+
+$ yhcancel 14248255 # 结束计算任务（如果退出登录节点的SSH，所有占用资源都会被释放），ID号见yhq
+
+# 方式三：批处理方式
+# 该方式无需提前分配计算节点，分配调度交由底层系统完成
+$ vim mybash.sh
+# !/bin/bash
+yhrun -n 1 -N 1 -p free ./matmul
+$ chmod +x mybash # 为mybash.sh提供可执行权限
+$ yhbatch -N 1 -p free ./mybash.sh
+Submitted batch job 14248644
+$ cat slurm-14248644.out # 执行完后会在本文件夹生成slurm输出文件
+...
+```
+
+### GPU集群
+下面示例在登录节点上分配计算资源并进入计算节点利用PyTorch进行深度学习计算的方法，需先登录GPU集群。
+```bash
+############ 登录节点 ###########
 # 天河二号由银河系列超级计算机继承而来，因此指令前缀均为yh
 $ yhinfo # 查看集群节点状态
 # alloc代表被占用，idle代表空闲
@@ -43,7 +111,7 @@ $ yhq # 查看分配的节点信息
 
 $ ssh gpu9 # 登录到计算节点（只有分配了才能登录）
 
-############ 计算结点 ###########
+############ 计算节点 ###########
 $ module avail # 查看可用模块
 --------------------------------------- /app/modulefiles/compiler ----------------------------------------
 gcc/4.9.4  gcc/5.5.0  gcc/6.5.0  gcc/9.2.0  intel/15.0.1  intel/18.0.1
@@ -81,6 +149,14 @@ $ module load PyTorch/1.2.0-CUDA10.0-py3.6
 
 $ python do_something.py # 执行任务
 
+# 或交互式运行
+$ python
+>>> import torch
+>>> torch.cuda.is_available()
+True
+
+$ nvidia-smi # 查看GPU资源
+
 $ exit # 返回登录节点
 ##################################
 
@@ -89,14 +165,14 @@ $ yhcancel 139022 # 结束计算任务（如果退出登录节点的SSH，所有
 # 或者直接在登录节点用批处理提交作业任务
 # 与mpirun类似
 # yhrun [options] program
-$ yhrun -c 24 -N 2 -p work ls
+$ yhrun -n 1 -N 2 -p gpu_v100 ./test.py
 
 # 批处理作业
 $ vi mybash.sh
 # !/bin/bash
-yhrun -n 4 -N 4 -p MIC hostname
+yhrun -n 1 -N 2 -p ./test.py
 $ chmod +x mybash # 为mybash.sh提供可执行权限
-$ yhbatch -N 4 -p MIC ./mybash.sh
+$ yhbatch -N 2 -p gpu_v100 ./mybash.sh
 ```
 
 ## 查看硬件配置
