[blog] Update ICPC compiler

--- a/_posts/2020-04-01-tianhe.md
+++ b/_posts/2020-04-01-tianhe.md
@@ -179,6 +179,14 @@ $ yhbatch -N 1 -p gpu_v100 ./mybash.sh
 ```bash
 # 需登录计算节点操作，否则查看的是登录节点的资源情况
 $ top
+# us: user cpu time (or) % CPU time spent in user space
+# sy: system cpu time (or) % CPU time spent in kernel space
+# ni: user nice cpu time (or) % CPU time spent on low priority processes
+# id: idle cpu time (or) % CPU time spent idle
+# wa: io wait cpu time (or) % CPU time spent in wait (on disk)
+# hi: hardware irq (or) % CPU time spent servicing/handling hardware interrupts
+# si: software irq (or) % CPU time spent servicing/handling software interrupts
+# st: steal time - - % CPU time in involuntary wait by virtual cpu while hypervisor is servicing another processor (or) % CPU time stolen from a virtual machine
 
 # 操作系统
 $ cat /etc/redhat-release
