--- a/_posts/2019-06-27-git.md
+++ b/_posts/2019-06-27-git.md
@@ -35,3 +35,27 @@ git stash pop # pop out modification
 * 初始化子模块：`git submodule init`
 * 拉取子模块到本地仓库：`git submodule update`
 * 更新子模块内容：进入子模块文件夹后，`git pull`
+
+## 添加SSH连接
+参见[Generating a new SSH key and adding it to the ssh-agent](https://help.github.com/en/github/authenticating-to-github/generating-a-new-ssh-key-and-adding-it-to-the-ssh-agent)。
+```bash
+$ ssh-keygen -t rsa -b 4096 -C "your_email@example.com"
+# This creates a new ssh key, using the provided email as a label.
+> Generating public/private rsa key pair.
+> Enter a file in which to save the key (/home/you/.ssh/id_rsa): [Press enter]
+> Enter passphrase (empty for no passphrase): [Type a passphrase]
+> Enter same passphrase again: [Type passphrase again]
+# Adding your SSH key to the ssh-agent
+$ eval "$(ssh-agent -s)"
+> Agent pid 59566
+$ ssh-add ~/.ssh/id_rsa
+```
+
+然后将`.ssh/id_rsa.pub`添加到Github账户中，参见[此文](https://help.github.com/en/github/authenticating-to-github/adding-a-new-ssh-key-to-your-github-account)。
+
+可通过下面指令测试SSH是否能正常连接Github，见[此文](https://help.github.com/en/github/authenticating-to-github/testing-your-ssh-connection)。
+```bash
+$ ssh -T git@github.com
+```
+
+用SSH方式`git clone`会比直接用HTTP快很多。
