[blog] Update previous tools

--- a/_posts/2019-03-31-c-timing.md
+++ b/_posts/2019-03-31-c-timing.md
@@ -17,6 +17,12 @@ void timing()
     foo(); // do something
     stop = time(NULL);
     printf("Time:%ld\n",(stop-start));
+
+    clock_t start2,stop2; // high resolution
+    start2 = time(NULL);
+    foo(); // do something
+    stop2 = time(NULL);
+    printf("Time:%f\n",(stop2-start2)/CLOCKS_PER_SEC);
 }
 ```
 
@@ -32,7 +38,7 @@ int main()
 {
     auto t1 = Clock::now();
     auto t2 = Clock::now();
-    std::cout << "Delta t2-t1: " 
+    std::cout << "Delta t2-t1: "
               << std::chrono::duration_cast<std::chrono::nanoseconds>(t2 - t1).count()
               << " nanoseconds" << std::endl;
 }
