[blog] Update FPGA

--- a/_posts/2020-04-26-heterocl.md
+++ b/_posts/2020-04-26-heterocl.md
@@ -9,7 +9,7 @@ tag: [tools]
 <!--more-->
 
 ## LLVM新版本支持
-由于之前安装[TVM]({% post_url 2020-03-17-tvm-installation %})使用的是LLVM 9.0，而HeteroCL在[这一版本](https://github.com/cornell-zhang/heterocl/tree/473d5f32be5a2b7161d73e7c31c2022e2d5b2c4b)下仍只支持LLVM6.0。直接通过官方教程`make`编译会产生错误，下面是出现的两个问题，以及相应的解决方案。
+由于之前安装[TVM]({% post_url 2020-03-17-tvm-installation %})使用的是LLVM 9.0，而HeteroCL在[这一版本](https://github.com/cornell-zhang/heterocl/tree/473d5f32be5a2b7161d73e7c31c2022e2d5b2c4b)下只支持LLVM6.0。直接通过官方教程`make`编译会产生错误，下面是出现的两个问题，以及相应的解决方案。
 * [API更改](https://bugs.freedesktop.org/show_bug.cgi?id=109540)
     ```bash
     src/codegen/llvm/codegen_llvm.cc: In member function ‘virtual void TVM::codegen::CodeGenLLVM::VisitStmt_(const Halide::Internal::Print*)’:
