[blog] Update links

--- a/_posts/2019-02-24-makefile.md
+++ b/_posts/2019-02-24-makefile.md
@@ -104,6 +104,7 @@ all : $(LONGPRE)
 ```
 
 * 如果在gcc编译指令中声明`-DXX`，则意味着定义了变量`XX`，在C的文件中`#ifdef(XX)`可调用，例子可见[C与汇编混编]({% post_url 2019-03-16-c-and-assembly %})
+* `@echo`不会回显这条指令，`echo`则会，参见[此回答](https://stackoverflow.com/questions/29576815/difference-between-echo-and-echo-in-unix-shells)
 
 ## 参考资料
 1. GNU make, <https://www.gnu.org/software/make/manual/make.html#Reference>
