--- a/_posts/2019-06-27-git.md
+++ b/_posts/2019-06-27-git.md
@@ -59,3 +59,5 @@ $ ssh -T git@github.com
 ```
 
 用SSH方式`git clone`会比直接用HTTP快很多。
+
+但注意用SSH很可能没法push上去，如果Github Desktop的SSH连接没有设置好的话，因此这时候可以重新将SSH换回HTTP，参见[此文](https://help.github.com/en/github/using-git/changing-a-remotes-url#switching-remote-urls-from-ssh-to-https)。
