--- a/_posts/2019-06-27-ui.md
+++ b/_posts/2019-06-27-ui.md
@@ -9,7 +9,11 @@ tags: [tools]
 <!--more-->
 
 ## 配色方案
-见[Flat UI Colors](https://flatuicolors.com/)，上面会给出每种配色方案的16进制编码
+* 见[Flat UI Colors](https://flatuicolors.com/)，上面会给出每种配色方案的16进制编码
+* 见Matplotlib的[colormap](https://matplotlib.org/examples/color/colormaps_reference.html)
+* [Colorbrewer](https://colorbrewer2.org/)
+* [LaTeX color definition](http://latexcolor.com/)
+* [Web colors](https://www.rapidtables.com/web/color/index.html)
 
 ## 字体名称
 下面是`CSS: font-family`常用的中文字体的英文对照，具体效果可见Word
