--- a/_posts/2020-03-24-spa-nju.md
+++ b/_posts/2020-03-24-spa-nju.md
@@ -6,7 +6,7 @@ tag: [pl,compiler]
 
 南京大学的[李樾](https://yuelee.bitbucket.io/)和[谭添](https://silverbullettt.bitbucket.io/)老师在2020年春季开设了《软件分析》课程，讲授静态程序分析(static program analysis, SPA)的相关内容。由于一直很想系统学习编译器优化及编程语言的知识，但无奈一直没有找到好的资料，国内开设相关课程的学校和老师可以说几乎没有。刚好看到谭添老师在[知乎](https://zhuanlan.zhihu.com/p/110050716)上的宣传，又恰逢疫情期间，就跟着[B站](https://space.bilibili.com/2919428/channel/detail?cid=106434)的录播视频一起学了。
 
-本文算是课程的学习笔记吧，会随着课程进度不断更新，完整的课程课件需要等两位老师放出来。由于一年前我已经跟着UFMG的[DCC 888](https://homepages.dcc.ufmg.br/~fernando/classes/dcc888/)学过一段静态程序分析，所以其中一些细节可能我理解了就不会再附在这。从短短几节课的感受来说，南大的课程更加适合新手入门，以Java为基础，以[Soot](https://github.com/Sable/soot)作为静态分析工具，老师会事无巨细地讲解分析算法步骤。而[UFMG的课程]({% post_url 2019-02-15-spa-1 %})以C/C++为基础，以[LLVM](https://llvm.org/)作为分析器，看上去他们的课时更加充裕，从理论到工具的使用也都有详细的讲解。
+本文算是课程的学习笔记吧，会随着课程进度不断更新，完整的课程课件需要等两位老师放出来（已经放出来了，参见[课程网站](https://pascal-group.bitbucket.io/teaching.html)）。由于一年前我已经跟着UFMG的[DCC 888](https://homepages.dcc.ufmg.br/~fernando/classes/dcc888/)学过一段静态程序分析，所以其中一些细节可能我理解了就不会再附在这。从短短几节课的感受来说，南大的课程更加适合新手入门，以Java为基础，以[Soot](https://github.com/Sable/soot)作为静态分析工具，老师会事无巨细地讲解分析算法步骤。而[UFMG的课程]({% post_url 2019-02-15-spa-1 %})以C/C++为基础，以[LLVM](https://llvm.org/)作为分析器，看上去他们的课时更加充裕，从理论到工具的使用也都有详细的讲解。
 
 <!--more-->
 
