[blog] Update HeteroCL & BNN

--- a/_posts/2019-06-27-git.md
+++ b/_posts/2019-06-27-git.md
@@ -29,6 +29,7 @@ git stash pop # pop out modification
 * 查看分支：`git branch`
 * 切换分支：`git checkout master`
 * 合并分支：`git merge dev`
+* 拉去特定分支：`git pull origin <远程分支名>:<本地分支名>`
 
 ## 子模块
 * 添加子模块：`git submodule add <url>`
@@ -61,3 +62,6 @@ $ ssh -T git@github.com
 用SSH方式`git clone`会比直接用HTTP快很多。
 
 但注意用SSH很可能没法push上去，如果Github Desktop的SSH连接没有设置好的话，因此这时候可以重新将SSH换回HTTP，参见[此文](https://help.github.com/en/github/using-git/changing-a-remotes-url#switching-remote-urls-from-ssh-to-https)。
+
+## Pull Request (PR)
+* 分离太大的PR：<https://gist.github.com/loilo/930f141d9acf89e9e734ffa042acd750>
