--- a/_posts/2020-04-26-heterocl.md
+++ b/_posts/2020-04-26-heterocl.md
@@ -27,6 +27,19 @@ tag: [tools]
         llvm::WriteBitcodeToFile(mptr_, dest);
     ```
 
+### v0.3
+对于v0.3版本的支持，如果在电脑里安装了不同的TVM，则可能会报下面的错，参见此[issue](https://discuss.tvm.ai/t/llvm-error-option-registered-more-than-once-while-loading-libtvm-so/269)
+```
+: CommandLine Error: Option 'xcore-max-threads' registered more than once!
+LLVM ERROR: inconsistency in registered CommandLine options
+```
+
+这时可以考虑将`hlib/python/hlib/__init__.py`里面第二行
+```python
+from . import frontend
+```
+移除，因为`frontend`会用到Relay，依赖于第三方TVM库。参见[此commit](https://github.com/chhzh123/heterocl/commit/83497b597da3af1d2e12952c576f7970f605443a)。
+
 ## 安装
 修完bug之后可以改变`Makefile.config`里的配置（主要是LLVM和CMake的路径），然后将`Makefile`内的`python`改为`python3`，并去除`build-pkgs`的requirement，然后就可以通过以下指令编译安装了。（这里没有用官方的`python setup.py install`，而采用了类似TVM的路径安装法。）
 ```bash
