[blog] Update git & hls

--- a/_posts/2019-06-27-git.md
+++ b/_posts/2019-06-27-git.md
@@ -13,8 +13,20 @@ tag: [tools]
 * 查看文件差异：`git diff file`
 * 查看提交/回复记录：`git reflog`
 * 回滚：`git reset --hard HEAD^`（或者跟哈希码，从`reflog`里得到）
+    ```bash
+    git reset --hard commit_id  // 不保留未提交的修改
+    git reset --soft commit_id  // 默认方式，保留未提交的修改
+    ```
 * 添加要提交的文件：`git add xxx.cpp`
 * 提交到暂存区：`git commit -m "update log"` / `-am`实现添加并提交
+* 删除暂存区
+    ```bash
+    git clean -f
+    删除当前目录下untrack文件和文件夹， 不包括.gitignore中指定的文件和文件夹
+    git clean -df
+    删除当期目录下的所有untrack的文件和文件夹
+    git clean -xdf
+    ```
 * 推到远端仓库：`git push`
 * 只提交部分文件，同时修改提交时间
 
@@ -59,7 +71,7 @@ $ ssh-add ~/.ssh/id_rsa
 $ ssh -T git@github.com
 ```
 
-用SSH方式`git clone`会比直接用HTTP快很多。
+用SSH方式`git clone`可能比用HTTP快。关于在Linux下提速`git clone`，可参见[此文](https://www.linuxidc.com/Linux/2019-05/158461.htm)。
 
 但注意用SSH很可能没法push上去，如果Github Desktop的SSH连接没有设置好的话，因此这时候可以重新将SSH换回HTTP，参见[此文](https://help.github.com/en/github/using-git/changing-a-remotes-url#switching-remote-urls-from-ssh-to-https)。
 
