--- a/_posts/2020-04-26-heterocl.md
+++ b/_posts/2020-04-26-heterocl.md
@@ -49,6 +49,8 @@ export HCL_HOME=/path/to/heterocl
 export PYTHONPATH=$HCL_HOME/python:$HCL_HOME/hlib/python:${PYTHONPATH}
 ```
 
+最后两行环境变量的设置可放在`~/.bashrc`内，这样每次开启终端就不用重新`source`了。
+
 ## 测试
 可运行[Getting Started](http://heterocl.csl.cornell.edu/doc/tutorials/tutorial_01_get_started.html#sphx-glr-tutorials-tutorial-01-get-started-py)上的测试代码。
 ```python
