[blog] Update HeteroCL

--- a/_posts/2020-04-26-heterocl.md
+++ b/_posts/2020-04-26-heterocl.md
@@ -92,3 +92,18 @@ print(hcl_a)
 print(np_A)
 print(np_B)
 ```
+
+## 调试
+由于HeteroCL采用Python和C++混编，并采用了TVM的PackedFunc的方法进行函数互相调用，因此调试起来可能会有一定难度。
+
+下面给出了利用gdb定位SegFault的[方法](https://stackoverflow.com/questions/2663841/python-tracing-a-segmentation-fault/2664232)。
+```bash
+gdb python
+(gdb) run /path/to/script.py
+## wait for segfault ##
+(gdb) backtrace
+## stack trace of the c code
+```
+
+## TVM内核相关资料
+* Halide Node, <https://jcf94.com/>
