[blog] Update git & cuda

--- a/_posts/2019-06-27-git.md
+++ b/_posts/2019-06-27-git.md
@@ -7,6 +7,7 @@ tag: [tools]
 虽然Github Desktop用得很爽，但是偶尔也会有一些特殊的需求，故还是在此记录一下。
 
 <!--more-->
+
 * 初始化：`git init project`
 * 查看状态：`git status`
 * 查看日志：`git log`
@@ -17,6 +18,7 @@ tag: [tools]
     git reset --hard commit_id  // 不保留未提交的修改
     git reset --soft commit_id  // 默认方式，保留未提交的修改
     ```
+* 回滚完强制覆写远端仓库记录：`git push origin local_branch --force`
 * 添加要提交的文件：`git add xxx.cpp`
 * 提交到暂存区：`git commit -m "update log"` / `-am`实现添加并提交
 * 删除暂存区
@@ -42,6 +44,7 @@ git stash pop # pop out modification
 * 切换分支：`git checkout master`
 * 合并分支：`git merge dev`
 * 拉去特定分支：`git pull origin <远程分支名>:<本地分支名>`
+* 合并多个commit：`git rebase -i id`
 
 ## 子模块
 * 添加子模块：`git submodule add <url>`
