[blog] Update BNN popcount

--- a/_posts/2020-05-01-bnn.md
+++ b/_posts/2020-05-01-bnn.md
@@ -69,8 +69,13 @@ $$\mathbf{y}=\frac{\mathbf{x}-\mathbf{\mu}}{\sqrt{\sigma^2+\varepsilon}}\gamma+\
 
 在具体实现这些层时一定要注意每一层的输出结果的**类型**，否则做量化时就会出错。
 
+## Popcount
+BNN的conv2d和dense layer中最为核心的即为popcount的实现，这里会有很多magic methods，gcc (CPU)是提供了内置的[intrinsic](https://docs.tvm.ai/tutorials/language/intrin_math.html)，但FPGA则需自己实现。可参考：
+* [Popcount: counting 1’s in a bit stream](https://www.johndcook.com/blog/2020/02/21/popcount/)
+* [A SWAR Algorithm for Popcount](https://www.playingwithpointers.com/blog/swar.html)
+
 ## References
 * [SDSoC Tutorial](https://github.com/seanlatias/sdsoc-tutorial/tree/master/bnn)
 * [Cornell 5775 Lab 4](https://www.csl.cornell.edu/courses/ece5775/pdf/lab4.pdf)
 * [HeteroCL BNN Implementation](https://github.com/chhzh123/heterocl/blob/mydev-v0.3/hlib/python/hlib/op/bnn.py)
-* [HeteroCL BNN Demo](https://github.com/chhzh123/heterocl-demo/blob/master/bnn/bnn_main.py)
+* [HeteroCL BNN Demo](https://github.com/chhzh123/heterocl-demo/blob/master/bnn/lab5775/bnn_main.py)
