[blog] Update git & hls & cpp

--- a/_posts/2019-06-27-git.md
+++ b/_posts/2019-06-27-git.md
@@ -46,6 +46,11 @@ git stash pop # pop out modification
 * 拉去特定分支：`git pull origin <远程分支名>:<本地分支名>`
 * 合并多个commit：`git rebase -i id`
 
+设置git账户信息（如果已经设置了，需要用`--replace-all`覆盖）
+* `git config --global user.name "username"`
+* `git config --global user.email "email"`
+* `git config --list`
+
 ## 子模块
 * 添加子模块：`git submodule add <url>`
 * 初始化子模块：`git submodule init`
