--- a/_posts/2019-02-08-fpga-all.md
+++ b/_posts/2019-02-08-fpga-all.md
@@ -60,7 +60,7 @@ graph TD;
     D -- Bitstream --> E["Physical Level"];
 </div>
 
-* **高层次综合**(high-level synthesis, HLS)：将高级程序语言C/C++编译为Verilog等[硬件描述语言(HDL)]({% post_url 2019-02-08-hll-and-hdl %})
+* [**高层次综合**]({% post_url 2019-02-12-hls %})(high-level synthesis, HLS)：将高级程序语言C/C++编译为Verilog等[硬件描述语言(HDL)]({% post_url 2019-02-08-hll-and-hdl %})
 * **逻辑综合**(logic synthesis)：将HDL较为高层的逻辑结构转化为逻辑门/网表(netlist)，指明连接关系
 * 实施(implementation)：Electronic Design Interchange Format(EDIF)
 	- 转译(translate)：将所有网表及限制整合入一个大的平的(flat)网表，没有层次结构(hierarchy)
