--- a/_posts/2019-02-12-hls.md
+++ b/_posts/2019-02-12-hls.md
@@ -4,9 +4,12 @@ title: 高层次综合
 tag: [fpga, hls]
 ---
 
-## 简介
 高层次综合(High-Level Synthesis, HLS)目标是将高级编程语言(High-Level Languages, HLL)编写的程序转化为硬件描述语言(Hardware Description Language, HDL)的程序。
 
+<!--more-->
+
+## 简介
+主要分为以下几个步骤。
 <div class="mermaid">
 graph TD;
     A["HLL (C/C++)"] --> B["Allocation"];
@@ -17,8 +20,6 @@ graph TD;
 * 分配(Allocation)：确定必要的硬件资源(几个加法/乘法/寄存器)
 * 调度(Scheduling)：每一个时间周期内应执行什么操作
 * 绑定(Binding)：将硬件指派到每一个操作上
-
-<!--more-->
 
 注意与传统编译不同，[硬件描述语言]({% post_url 2019-02-08-hll-and-hdl %})并不用于编程，它直接**描述**了硬件电路。
 
