--- a/_posts/2019-02-22-llvm.md
+++ b/_posts/2019-02-22-llvm.md
@@ -5,14 +5,9 @@ tag: compiler
 ---
 
 Low-Level Virtual Machine ([LLVM](http://llvm.org))是一个编译器设施，包含一系列可重用的库和良定义的接口。
-* 用C++写
-* 多种前端
-* 多种后端
-* v1, 2003, Illinois
-* 开源
-* 目前由苹果维护
+它的核心采用C++进行编写，支持多种前端编程语言及多种后端硬件，第一版由UIUC于2003年发布，开源，目前由苹果维护。
 
-LLVM对应的C/C++编译器即为clang，通常编译时间要比gcc和icc少很多
+LLVM对应的C/C++编译器即为clang，通常编译时间要比gcc和icc少很多。
 
 <!--more-->
 
