[blog] Update spa-ufmg

--- a/_posts/2019-07-23-pin.md
+++ b/_posts/2019-07-23-pin.md
@@ -4,7 +4,7 @@ title: Pin动态指令分析工具
 tags: [tools]
 ---
 
-Pin是Intel公司开发的程序分析工具，类似于[Valgrind]({% post_url 2019-02-27-spa-extra-1 %})。
+Pin是Intel公司开发的程序分析工具，类似于[Valgrind]({% post_url 2019-02-15-spa-ufmg %})。
 
 但是！看上去Pin的可定制化程度高得多，可以自己编写Tools作为分析工具，可以想象为Pin是一个更加底层的LLVM[CGO, 2004]。所以体系结构领域常用Pin来写cache或prefetcher的模拟器。
 
