[blog] Update tools

--- a/_posts/2019-06-27-git.md
+++ b/_posts/2019-06-27-git.md
@@ -4,7 +4,7 @@ title: Git操作指南
 tag: [tools]
 ---
 
-虽然Github Desktop用得很爽，但是偶尔也会有一些特殊的需求，故还是在此记录一下。
+虽然Github Desktop用得很爽，但是偶尔也会有一些特殊的需求（比如回滚或是在Linux环境下操作），故还是在此记录一下。
 
 <!--more-->
 
