[blog] Fix link

--- a/_posts/2019-02-15-spa-ufmg.md
+++ b/_posts/2019-02-15-spa-ufmg.md
@@ -579,7 +579,7 @@ Kempe的启发式算法
 
 考虑将串行程序编译到并行机器上...
 
-注意：本文考虑的是**循环体粒度**上的并行，而不是[**指令粒度**]({% post_url 2019-02-20-spa-extra-2 %})上的并行。
+注意：本文考虑的是**循环体粒度**上的并行，而不是**指令粒度**上的并行。
 
 <!--more-->
 
