[blog] Update HLS

--- a/_posts/2020-05-01-bnn.md
+++ b/_posts/2020-05-01-bnn.md
@@ -47,7 +47,7 @@ $$a\leftarrow a+(b\times c)$$
 
 对应的有**融合乘加(fused multiply-add, FMA)**操作，这在CPU SIMD中很常见。
 
-对于这种卷积操作，硬件可以很方便地通过XNOR和popcount实现。
+对于这种卷积操作，硬件可以很方便地通过XNOR和popcount实现。注意要进行bitpicking（通常pack channel），大位宽进行位运算会更加高效。
 ![xnor](https://software.intel.com/sites/default/files/managed/c0/e0/webops10048-fig3-bit-packing.png)
 
 注意padding之后的元素并不算入popcount当中，因此在reduce求和之前需要先判断是否在padding的边界。
