[blog] Update bash terminal

--- a/_posts/2020-04-07-bash.md
+++ b/_posts/2020-04-07-bash.md
@@ -152,5 +152,16 @@ done
 echo "All done"
 ```
 
+## 终端输入
+```bash
+# & means run in backstage
+# nohup means not stopping running after the terminal is dead
+# > means redirect output to file
+$ nohup ./run.sh & > out.log
+
+# show output on the screen and also output to file
+$ ./run.sh | tee out.log
+```
+
 ## 参考资料
 * Bash Scripting Tutorial, <https://ryanstutorials.net/bash-scripting-tutorial/>
