[blog] Fix display bug

--- a/_posts/2019-01-30-why-blog.md
+++ b/_posts/2019-01-30-why-blog.md
@@ -18,8 +18,9 @@ title: Why blog?
 * Markdown语法<br/>
 大大免除了html排版的繁琐，同时可以更多关注于文字内容本身，而不是其表现形式。
 
-* LaTeX公式显示($$\KaTeX$$)<br/>
-因为用惯了LaTeX，离开了它就如同鱼儿离开水无法生存((( <br/>
+* LaTeX公式显示<br/>
+因为用惯了LaTeX，离开了它就如同鱼儿离开水无法生存( <br/>
+
 $$\displaystyle\sum_{i=1}^n\frac {1}{n^2}=\frac{\pi^2}{6}$$
 
 * 代码高亮<br/>
