--- a/_posts/2020-02-10-gnn.md
+++ b/_posts/2020-02-10-gnn.md
@@ -4,7 +4,7 @@ title: 图表示学习（2）- 图神经网络
 tags: [dl,graph]
 ---
 
-这是**图表示学习(representation learning)的第二部分——图神经网络(graph neural network, gnn)**，主要涉及GCN [ICLR'17]和GraphSAGE [NeurIPS'17]两篇论文。
+这是**图表示学习(representation learning)的第二部分——图神经网络(graph neural network, gnn)**，主要涉及GCN [ICLR'17]、GraphSAGE [NeurIPS'17]和C&S [Arxiv:2010.13993]三篇论文。
 
 <!--more-->
 
@@ -111,6 +111,20 @@ $$\mathop{AGG}=LSTM([\mathbb{h}_{u}^{(k)},\forall u\in\pi(N(v))])$$
 
 {% include image.html fig="Graph/graphsage-alg.png" width="80" %}
 
+## Correct & Smooth (C&S) [^3]
+这篇paper在2020年10月的时候霸榜了OGB的几个数据集，核心是在claim我们**不需要**GNN这么复杂的模型，用**简单的MLP加上一些后处理技巧**就可以做到很好的效果了。
+
+分为三步走，第一步用MLP直接暴力拟合（不考虑图结构），第二步correct，第三步smooth。
+
+假设特征矩阵为$X\in\mathbb{R}^{n\times p}$，目标矩阵$Y\in\mathbb{R}^{n\times c}$为one-hot encoding，第一步MLP则是学一个函数$f$使得最小化损失函数之和
+
+$$\sum l(f(X_i),Y_i)$$
+
+可以想象经过$f$得到的是一个softmax的概率，即为各个类别的预测值$\hat{Y}_i$，此为base prediction。
+
+第二步correct，即算预测值和真实值的残差$E=\hat{Y}-Y$，然后用标签传播优化$E$（此时引入图结构，具体优化目标见论文）。这里的idea在于误差应该沿着图的边正相关（base prediction to be positively correlated along edges in the graph），换句话说结点$i$有误差，则其邻居也应该有相似的误差。这一步会得到一个新的估计$\hat{Y}^{(r)}$
+
+第三步smooth，idea是相邻的点应该有相似的label，这样又可以得到另外一个优化函数，再通过另一轮label propagation得到最终结果。
 
 ## Other Resources
 * Stanford Network Analysis Project (SNAP): <http://snap.stanford.edu/>
@@ -120,3 +134,4 @@ $$\mathop{AGG}=LSTM([\mathbb{h}_{u}^{(k)},\forall u\in\pi(N(v))])$$
 ## Reference
 [^1]: Thomas N. Kipf, Max Welling (Amsterdam), *Semisupervised Classification with Graph Convolutional Networks*, ICLR, 2017 ([**Most cited publication**](https://github.com/naganandy/graph-based-deep-learning-literature))
 [^2]: William L. Hamilton, Rex Ying, Jure Leskovec (Stanford), *Inductive Representation Learning on Large Graphs*, NeurIPS, 2017
+[^3]: Qian Huang, Horace He, Abhay Singh, Ser-Nam Lim, Austin R. Benson (Cornell), **Combining Label Propagation and Simple Models Outperforms Graph Neural Networks**, [Arxiv:2010.13993](https://arxiv.org/pdf/2010.13993.pdf), 2020 ([Code](https://github.com/CUAI/CorrectAndSmooth))
